--- a/.github/workflows/release-pyinstaller.yml
+++ b/.github/workflows/release-pyinstaller.yml
@@ -37,6 +37,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Install dependencies
+        shell: bash
         run: |
           if [ -f uv.lock ]; then
             uv sync --dev --frozen
